- fix incorrect linux start command.